--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,3 +9,11 @@ a.active,
 button:hover {
   color: #fa5252;
 }
+
+.footer a {
+  display: block;
+}
+.footer a:hover {
+  color: #fa5252;
+  cursor: pointer;
+}
